<resources>
    <string name="app_name">My App ChamaEu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_login">Usuário</string>
    <string name="menu_provider">Cadastro Prestador</string>
    <string name="menu_cliente">Cadastro Cliente</string>
    <string name="menu_pesquisa">Pesquisa</string>
    <string name="menu_cadastro_opc">Opção de Cadastro</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Registri-se</string>
    <string name="text_user">Digite seu Usuário</string>
    <string name="passwod_text">Digite sua Senha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="op_cadastro">Opção de Cadastro</string>
    <string name="user_client">Usuário Cliente</string>
    <string name="user_provider">Usuário Prestador de Serviço</string>
    <string name="logo">Chama Eu</string>
    <string name="cadastro_client">Cadastro Usuario</string>
    <string name="user_name_text">Nome de Usuário</string>
    <string name="senha_text">Senha</string>
    <string name="email_user">E-mail</string>
    <string name="number_user">Número de telefone</string>
    <string name="save_text">Salvar</string>
    <string name="in_name" />
    <string name="cadastro_provider">Cadastro Prestador de Serviço</string>
    <string name="list_servc">Lista de Serviços</string>
    <string name="search_text">Pesquisa</string>
</resources>