<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_cadastro_cliente"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cliente" />
        <item
            android:id="@+id/nav_cadastro_opcao"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cadastro_opc" />
        <item
            android:id="@+id/nav_cadastro_prestador"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_provider" />
        <item
            android:id="@+id/nav_pesquisa"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_pesquisa" />
    </group>
</menu>