<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.myappchamaeu.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_login_to_nav_cadastro_opcao"
            app:destination="@id/nav_cadastro_opcao" />
        <action
            android:id="@+id/action_nav_login_to_nav_home2"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_login_to_nav_pesquisa2"
            app:destination="@id/nav_pesquisa" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myappchamaeu.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myappchamaeu.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myappchamaeu.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_cadastro_prestador"
        android:name="com.example.myappchamaeu.ui.cadastro.Cadastro_Prestador"
        android:label="@string/menu_provider"
        tools:layout="@layout/fragment_cadastro_prestador" >
        <action
            android:id="@+id/action_nav_cadastro_prestador_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_cadastro_cliente"
        android:name="com.example.myappchamaeu.ui.cadastro.CadastroCliente"
        android:label="@string/menu_cliente"
        tools:layout="@layout/fragment_cadastro_cliente" >
        <action
            android:id="@+id/action_nav_cadastro_cliente_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_cadastro_cliente_to_nav_home2"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_pesquisa"
        android:name="com.example.myappchamaeu.ui.pesquisa.Pesquisa"
        android:label="@string/menu_pesquisa"
        tools:layout="@layout/fragment_pesquisa" />

    <fragment
        android:id="@+id/nav_cadastro_opcao"
        android:name="com.example.myappchamaeu.ui.cadastro.Cadastro_opcao"
        android:label="@string/menu_cadastro_opc"
        tools:layout="@layout/fragment_cadastro_opcao" >
        <action
            android:id="@+id/action_nav_cadastro_opcao_to_nav_cadastro_cliente"
            app:destination="@id/nav_cadastro_cliente" />
        <action
            android:id="@+id/action_nav_cadastro_opcao_to_nav_cadastro_prestador"
            app:destination="@id/nav_cadastro_prestador" />
    </fragment>

</navigation>